k8snonroot-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snonroot
spec:
  crd:
    spec:
      names:
        kind: K8sNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snonroot

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not input.review.object.spec.securityContext.runAsNonRoot
          msg := sprintf("Pod must run as non-root. Container: %v", [container.name])
        }
